adjusted controllers, server file

--- a/views/partials/inventory-details.handlebars
+++ b/views/partials/inventory-details.handlebars
@@ -3,6 +3,6 @@
   <div class="painting-details">
     <h3>{{product_name}}</h3>
     <p>Quantity: {{quantity}}</p>
-    <p>Last updated by: {{used_id}}</p>
+    <p>Last updated by: {{stock_id}}</p>
   </div>
 </section>
