added an href link to product

--- a/views/partials/inventory-details.handlebars
+++ b/views/partials/inventory-details.handlebars
@@ -1,8 +1,10 @@
 <section class="painting">
   {{!-- <img src="/images/{{painting.filename}}" alt="{{painting.description}}"> --}}
+  <a href="/product/{{id}}">
   <div class="painting-details">
     <h3>{{product_name}}</h3>
     <p>Quantity: {{quantity}}</p>
     <p>Last updated by: {{stock_id}}</p>
   </div>
+  </a>
 </section>
