--- a/views/partials/inventory-details.handlebars
+++ b/views/partials/inventory-details.handlebars
@@ -1,10 +1,27 @@
 <section class="painting">
   {{!-- <img src="/images/{{painting.filename}}" alt="{{painting.description}}"> --}}
-  <a href="/product/{{id}}">
-  <div class="painting-details">
+  
+</section>
+
+<div class="col-xl-3 col-md-6 mb-4">
+                            <div class="card border-left-primary shadow h-100 py-2">
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                              <a href="/product/{{id}}">
+  <div class="h5 mb-0 font-weight-bold text-gray-800">
     <h3>{{product_name}}</h3>
     <p>Quantity: {{quantity}}</p>
     <p>Last updated by: {{stock_id}}</p>
   </div>
   </a>
-</section>
+                                            </div>                                            
+                                        </div>
+                                        <div class="col-auto">
+                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
