--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,49 @@
   --border-radius: 0.3rem;
 }
 
+
+.counter {
+  background-color: var(--tertiary);
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  transition-duration: 0.4s;
+}
+
+.add {
+  background-color: white;
+  color: black;
+  /* border: 2px solid var(--tertiary); */
+
+}
+
+.add:hover {
+  background-color: var(--tertiary);
+  color: white;
+}
+
+.minus {
+  background-color: white;
+  color: black;
+  /* border: 2px solid var(--tertiary); */
+  
+}
+
+.minus:hover {
+  background-color: var(--tertiary);
+  color: white;
+}
+
+.btnContainer{
+  border: 2px solid var(--tertiary);
+  width: 35%;
+  position: relative;
+  left: 126px;
+}
 body {
   font-family: Arial;
   margin: 0;
