added new buttons for stock exchange

--- a/views/partials/product-details.handlebars
+++ b/views/partials/product-details.handlebars
@@ -7,9 +7,9 @@
             <button  class="counter add" onclick="totalClick(1)">+</button>
         </p>
         <button class="counter minus" onclick="totalClick(0)">Reset</button>
-        <button class="counter minus" >Submit</button>
-         <button class="counter minus">Update Quantity</button>
-        <button class="counter minus">Delete product</button>
+        {{!-- <button class="counter minus" >Submit</button> --}}
+         <button class="counter minus">Add Stock</button>
+        <button class="counter minus">Reduce Stock</button>
     </div>
 
    
