removed javascript from html and added it to own Javascipt file

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,6 +29,7 @@
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
+  <script src="/js/accessInventory.js"></script>
 </body>
 
 </html>
