--- a/views/partials/product-details.handlebars
+++ b/views/partials/product-details.handlebars
@@ -2,11 +2,11 @@
     {{!-- To Be Confirmed --}}
     <div  >
         <p class="btnContainer">
-            <button class="counter minus" onclick="totalClick(-1)">-</button>
+            <button class="counter minus"  {{! onclick="totalClick(-1) " }} >-</button>
             <span id="totalClicks">0</span>
-            <button  class="counter add" onclick="totalClick(1)">+</button>
+            <button  class="counter add" {{! onclick="totalClick(1)" }}>+</button>
         </p>
-        <button class="counter minus" onclick="totalClick(0)">Reset</button>
+        <button class="counter minus" id="reset">Reset</button>
         {{!-- <button class="counter minus" >Submit</button> --}}
          <button class="counter minus">Add Stock</button>
         <button class="counter minus">Reduce Stock</button>
@@ -14,24 +14,8 @@
 
    
     <script>
-        function totalClick(click) {
-            const totalClicks = document.getElementById('totalClicks');
-            const sumValue = parseInt(totalClicks.innerText) + click;
-
-            totalClicks.innerText = sumValue
-            //avoid negatives 
-
-            if (sumValue < 0) {
-                totalClicks.innerText = 0;
-            }
-
-            //reset button
-
-            if (click === 0){
-                totalClicks.innerText = 0;
-            }
-
-        }
+      
     </script>
+    
 
 </section>
