--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Inventory Dashboard</title>
+    
+    <title>Company Inventory</title>
 
     <!-- Custom fonts for this template-->
     <link rel="stylesheet" type="text/css" href="/css/jass.css">
@@ -27,11 +28,12 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
+        {{#if logged_in}}
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
-              <div class="sidebar-brand-text mx-3">Inventory Dashboard</div>
+              <div class="sidebar-brand-text mx-3">Company Inventory</div>
             </a>
             
             <!-- Divider -->
@@ -48,22 +50,17 @@
                 <a class="nav-link" id="logout">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Logout</span></a>
-              {{else}}
-                <a href="/login">Login</a>
               {{/if}}
             </li>
             {{#if logged_in}}
             <li>
-              {{else}}
-              <a class="nav-link" href="/login">
-                    <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Logout</span></a>
               {{/if}}
             </li>
 
             <!-- Divider -->
             <hr class="sidebar-divider">     
         </ul>
+        {{/if}}
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
@@ -90,8 +87,9 @@
                             <a class="nav-link">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Welcome, {{username}}</span>                                
                             </a>
-                        </li>
                         {{/if}}
+                        </li>
+                        
 
                     </ul>
 
@@ -102,18 +100,15 @@
                 <div class="container-fluid">
 
                     <!-- Page Heading -->
+                     {{#if logged_in}}
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
                         <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
                     </div>
+                    {{/if}}
 
                     <!-- Content Row -->
                     <div class="row">                 
-                        
-                    
-
-                        <!-- Pie Chart -->
                         {{{body}}} 
-
                     </div>
 
                 </div>
@@ -124,9 +119,9 @@
 
             <!-- Footer -->
             <footer class="sticky-footer bg-white">
-                <div class="container my-auto">
+                <div class="my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Project 2 - Group 1 Coding Bootcamp 2023</span>
+                        <span class="text-center">Copyright &copy; Project 2 - Group 1 Coding Bootcamp 2023</span>
                     </div>
                 </div>
             </footer>
