--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<div class="col-lg-6">
+<div class="col-lg-12"  align-items=center>
   <div class="p-5">
     <div class="text-center">
       <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
