--- a/views/partials/product-details.handlebars
+++ b/views/partials/product-details.handlebars
@@ -8,14 +8,10 @@
         </p>
         <button class="counter minus" id="reset">Reset</button>
         {{!-- <button class="counter minus" >Submit</button> --}}
-         <button class="counter minus">Add Stock</button>
+         <button id="addStock" class="counter minus">Add Stock</button>
         <button class="counter minus">Reduce Stock</button>
     </div>
 
-   
-    <script>
-      
-    </script>
     
 
 </section>
