--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,8 @@
+<div class="d-sm-flex align-items-center justify-content-between mb-4">
+  <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+</div>
+<div class="row">
 {{#each inventories as |inventory|}}
 {{> inventory-details}}
 {{/each}}
+</div>
