edited relative path for the css for product page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,7 +20,7 @@
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/sb-admin-2.min.css" rel="stylesheet">
+    <link href="/css/sb-admin-2.min.css" rel="stylesheet">
 </head>
 <body id="page-top">
 
@@ -50,10 +50,6 @@
                 <a class="nav-link" id="logout">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Logout</span></a>
-              {{/if}}
-            </li>
-            {{#if logged_in}}
-            <li>
               {{/if}}
             </li>
 
@@ -97,20 +93,8 @@
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
-                <div class="container-fluid">
-
-                    <!-- Page Heading -->
-                     {{#if logged_in}}
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
-                    </div>
-                    {{/if}}
-
-                    <!-- Content Row -->
-                    <div class="row">                 
-                        {{{body}}} 
-                    </div>
-
+                <div class="container-fluid">              
+                        {{{body}}}         
                 </div>
                 <!-- /.container-fluid -->
 
