--- a/views/partials/inventory-details.handlebars
+++ b/views/partials/inventory-details.handlebars
@@ -36,6 +36,7 @@
       <div class="h5 mb-0 font-weight-bold text-gray-800 text-center">
         <p>Quantity: {{quantity}}</p>
         <p>Last updated by: {{stock_id}}</p>
+        <img src="/images/{{filename}}" alt="{{description}}">
       </div>
     </a>
   </div>
