--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
+  {{!-- <div class="login-card">
+    <h2 class="page-title">Create an Account!</h2>
     <form class="form signup-form">
       <div class="form-group">
         <label for="username-signup">Username:</label>
@@ -17,6 +17,51 @@
         <button class="btn btn-primary" type="submit">signup</button>
       </div>
     </form>
+  </div>
+</div>
+
+<script src="./js/signup.js"></script> --}}
+
+<div class="col-lg-12"  align-items=center>
+  <div class="p-5">
+    <div class="text-center">
+      <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+    </div>
+    <form class="user login-form">
+      <div class="form-group">
+        <input
+          type="username"
+          class="form-control form-control-user"
+          id="username-signup"
+          placeholder="User Name"
+        />
+      </div>
+      <div class="form-group login-form">
+        <input
+          type="email"
+          class="form-control form-control-user"
+          id="email-signup"
+          aria-describedby="emailHelp"
+          placeholder="Email Address"
+        />
+      </div>
+      <div class="form-group">
+        <input
+          type="password"
+          class="form-control form-control-user"
+          id="password-signup"
+          placeholder="Password"
+        />
+      </div>
+      <button
+        class="btn btn-primary btn-user btn-block"
+        type="submit">Sign Up</button>
+
+    </form>
+    <hr />
+    <div class="text-center">
+      <a class="small" href="/login">Already have an account? Login!</a>
+    </div>
   </div>
 </div>
 
