added tools in homeroutes

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,4 +5,8 @@
 {{#each inventories as |inventory|}}
 {{> inventory-details}}
 {{/each}}
+
+{{#each tools as |tool|}}
+{{> tool-details tool=tool}}
+{{/each}}
 </div>
