--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,7 +1,7 @@
 <section class="container">
     <div>
       <h2>{{product.product_name}}</h2>
-      <p>Price: {{price}}</p>
+      <p>Quantity: {{product.quantity}}</p>
       <p>Description: {{product.description}}</p>
     </div>
   <div>
