added images to tools

--- a/views/partials/tool-details.handlebars
+++ b/views/partials/tool-details.handlebars
@@ -8,7 +8,7 @@
     <div class="card-body">      
       <p>Quantity: {{tool.quantity}}</p>
       <p>Last updated by: {{tool.stock_id}}</p>
-      {{!-- <img src="/images/{{filename}}" alt="{{description}}">   --}}
+      <img src="/images/{{tool.filename}}" alt="{{tool.product_name}}">  
     </div>
   </div>
 </div>
