added category database/routes/handlebasr

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,11 +2,7 @@
   <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
 </div>
 <div class="row">
-{{#each inventories as |inventory|}}
-{{> inventory-details}}
-{{/each}}
-
-{{#each tools as |tool|}}
-{{> tool-details tool=tool}}
+{{#each categories as |category|}}
+{{> category-details}}
 {{/each}}
 </div>
