added add new product route and delete product route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,6 +50,11 @@
                 <a class="nav-link" id="logout">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>Logout</span></a>
+             </li>
+             <li class="nav-item active">             
+                <a class="nav-link" href="/addproduct">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Add New Product</span></a>
               {{/if}}
             </li>
 
