commented out img in inventory-details

--- a/views/partials/inventory-details.handlebars
+++ b/views/partials/inventory-details.handlebars
@@ -11,7 +11,7 @@
       <div class="h5 mb-0 font-weight-bold text-gray-800 text-center">
         <p>Quantity: {{quantity}}</p>
         {{!-- <p>Category: {{category_id}}</p> --}}
-        <img src="/images/{{filename}}" alt="{{description}}">
+        {{!-- <img src="/images/{{filename}}" alt="{{description}}"> --}}
         </div>
       </a>
     </div>
