--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
     
-    <title>Company Inventory</title>
+    <title>🏗 Company Inventory</title>
 
     <!-- Custom fonts for this template-->
     <link rel="stylesheet" type="text/css" href="/css/jass.css">
