--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -121,27 +121,29 @@
 
     </div>
     <!-- End of Page Wrapper -->
+    {{!-- <script src="node_modules/animejs/lib/anime.min.js"></script> --}}
 
     <!-- Bootstrap core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    {{!-- <script src="vendor/jquery/jquery.min.js"></script> --}}
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    {{!-- <script src="vendor/jquery-easing/jquery.easing.min.js"></script> --}}
 
     <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin-2.min.js"></script>
+    {{!-- <script src="js/sb-admin-2.min.js"></script> --}}
 
     <!-- Page level plugins -->
-    <script src="vendor/chart.js/Chart.min.js"></script>
+    {{!-- <script src="vendor/chart.js/Chart.min.js"></script> --}}
 
     <!-- Page level custom scripts -->
-    <script src="js/demo/chart-area-demo.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script>
+    {{!-- <script src="js/demo/chart-area-demo.js"></script>
+    <script src="js/demo/chart-pie-demo.js"></script> --}}
     {{#if logged_in}}
     <script src="/js/logout.js"></script>
     {{/if}}
     <script src="/js/accessInventory.js"></script>
+
 
 </body>
 
