--- a/views/partials/product-details.handlebars
+++ b/views/partials/product-details.handlebars
@@ -11,6 +11,9 @@
         {{!-- <button class="counter minus" >Submit</button> --}}
          <button id="addStock" class="counter minus" data-value="{{product.id}}">Add Stock</button>
         <button id="reduceStock" class="counter minus" data-value="{{product.id}}">Reduce Stock</button>
+    <div>hiya</div>
+    <button id="beep">Beep Boop</button>
+
     </div>
 
     
