added anime js npm to buttons to give a slight rise effect

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,8 @@
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  transition-duration: 0.4s;
+  margin-left: 15px;
+  /* transition-duration: 0.4s; */
 }
 
 .add {
