--- a/views/partials/category-details.handlebars
+++ b/views/partials/category-details.handlebars
@@ -1,5 +1,5 @@
-<section class="card">
-  <a href="/category/{{id}}">
+<section  class="card">
+  <a id="categoryCard" href="/category/{{id}}">
     <header>{{name}}</header>
     <img src="/images/{{categories.[0].filename}}" alt="{{categories.[0].description}}">
   </a>
