--- a/views/partials/product-details.handlebars
+++ b/views/partials/product-details.handlebars
@@ -9,10 +9,10 @@
         </p>
         <button class="counter minus" id="reset">Reset</button>
         {{!-- <button class="counter minus" >Submit</button> --}}
-         <button id="addStock" class="counter minus" data-value="{{product.id}}">Add Stock</button>
-        <button id="reduceStock" class="counter minus" data-value="{{product.id}}">Reduce Stock</button>
-    <div>hiya</div>
-    <button id="beep">Beep Boop</button>
+        <button id="addStockBtn" class="counter minus" data-value="{{product.id}}">Add Stock</button>
+        <button id="reduceStockBtn" class="counter minus" data-value="{{product.id}}">Reduce Stock</button>
+    
+    {{!-- <button id="beep">Beep Boop</button> --}}
 
     </div>
 
