--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -145,6 +145,7 @@
     <script src="/js/accessInventory.js"></script>
     {{/if}}
     
+    <script src=" https://cdn.jsdelivr.net/npm/animejs "></script>
 
 
 </body>
