--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -3,7 +3,7 @@
       <h2>{{product.product_name}}</h2>
       <p>Quantity: {{product.quantity}}</p>
       <p>Description: {{product.description}}</p>
-      <button id="deleteBtn" data-value="{{product.id}}">Delete product</button>
+      <button id="deleteBtn" class="btn " data-value="{{product.id}}">Delete product</button>
     </div>
   <div>
     {{> product-details product=product}}
